services/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - env: []
        image: hello-world:latest
        name: hello
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
