services/hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - env: []
        image: hello-world:latest
        name: hello-world
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /etc/secrets
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: a
