services/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - env:
        - name: DATABASE_HOST
          value: DATABASE.example.com
        - name: DATABASE_URL
          value: DATABASE.URL.example.com
        image: redis:latest
        name: redis
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /etc/secrets
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: redis
