services/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
  - nodePort: 30101
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: hello
  type: NodePort
