services/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  ports:
  - nodePort: 30100
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: hello-world
  type: NodePort
