services/redis-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
  - nodePort: 30100
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  type: NodePort
